--- a/demo-base/pom.xml
+++ b/demo-base/pom.xml
@@ -1,89 +1,40 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0"?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.learn.parent</groupId>
-  <artifactId>yzh-learn</artifactId>
+  <parent>
+    <groupId>com.learn.parent</groupId>
+    <artifactId>yzh-learn</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../</relativePath>
+  </parent>
+  
+  
+  <groupId>com.learn.base</groupId>
+  <artifactId>demo-base</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
+  <packaging>war</packaging>
+  <name>demo-base Maven Webapp</name>
+  <url>http://maven.apache.org</url>
   
   
-  <modules>
-    <module>demo-springcloud</module>
-    <module>demo-base</module>
-  </modules>
   
-  
-  <build>
-    <finalName>yzh-learn</finalName>
-  </build>
-  
-   <repositories>
-	  <repository>
-	   <id>xuggle repo</id>
-	   <url>http://xuggle.googlecode.com/svn/trunk/repo/share/java/</url>
-	  </repository>
-	</repositories>
-  
-  <properties>
-       <skipTests>true</skipTests>
-       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-       <springframework.version>4.1.6.RELEASE</springframework.version>
-       <JAVA_HOME>C:\Program Files\Java\jdk1.8.0_51</JAVA_HOME>
-       <slf4j.version>1.7.5</slf4j.version>
-       <shiro.version>1.2.3</shiro.version>
-       <smack.version>4.1.8</smack.version>
-       <oltu.version>1.0.2</oltu.version>
-    </properties>
-    
-    
-    
-      <profiles>
-	  	<profile>
-		    <id>jdk-1.7</id>
-		    <activation>
-		        <activeByDefault>true</activeByDefault>
-		        <jdk>1.7</jdk>
-		    </activation>
-		    <properties>
-		        <maven.compiler.source>1.7</maven.compiler.source>
-		        <maven.compiler.target>1.7</maven.compiler.target>
-		        <maven.compiler.compilerVersion>1.7</maven.compiler.compilerVersion>
-		    </properties>
-		</profile> 
-	  </profiles>
-	  
-	  
-	<!-- springboot -->
-    <!-- Inherit defaults from Spring Boot -->
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.15.RELEASE</version>
-	</parent>
-    
-    
-    <dependencyManagement>
-    <dependencies>
-    <!-- test -->
+  <dependencies>
+     <!-- test -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.10</version>
-      <scope>test</scope>
     </dependency>
     
     <!-- httpclient 4 -->
     <dependency>
           <groupId>org.apache.httpcomponents</groupId>
           <artifactId>httpclient</artifactId>
-          <version>4.3.4</version>
       </dependency>
     
     <dependency>
 		<groupId>com.lenovo</groupId>
 		<artifactId>open-gateway-java-sdk</artifactId>
-		<version>0.0.2</version>
 	</dependency>
     
     
@@ -91,35 +42,19 @@
       <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-core</artifactId>
-            <version>${shiro.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-api</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-spring</artifactId>
-            <version>${shiro.version}</version>
         </dependency>
         
         
-	
-	<!-- springboot -->
-	<!-- Add typical dependencies for a web application -->
-	<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-web</artifactId>
-	</dependency>
     
     
     <!-- mqtt -->
     <dependency>
         <groupId>org.eclipse.paho</groupId>
         <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
-        <version>1.0.2</version>
     </dependency>
     
     <!-- opencv视频流相关处理 -->
@@ -134,16 +69,12 @@
    	<dependency>
 		<groupId>mysql</groupId>
 		<artifactId>mysql-connector-java</artifactId>
-		<scope>runtime</scope>
-		<version>5.1.6</version>
 	</dependency>
 	
 	
 	<dependency>
 		<groupId>c3p0</groupId>
 		<artifactId>c3p0</artifactId>
-		<scope>runtime</scope>
-		<version>0.9.1.2</version>
 	</dependency>
     
     
@@ -151,14 +82,12 @@
     <dependency>
 	    <groupId>com.netflix.hystrix</groupId>
 	    <artifactId>hystrix-core</artifactId>
-	    <version>1.5.12</version>
 	</dependency>
 	
 	<!-- commons-math3 -->
 	<dependency>
 	    <groupId>org.apache.commons</groupId>
 	    <artifactId>commons-math3</artifactId>
-	    <version>3.6.1</version>
 	</dependency>
 	
     
@@ -166,17 +95,14 @@
     <dependency>
         <groupId>org.apache.oltu.oauth2</groupId>
         <artifactId>org.apache.oltu.oauth2.authzserver</artifactId>
-        <version>${oltu.version}</version>
     </dependency>
     <dependency>
         <groupId>org.apache.oltu.oauth2</groupId>
         <artifactId>org.apache.oltu.oauth2.client</artifactId>
-        <version>${oltu.version}</version>
     </dependency>
     <dependency>
         <groupId>org.apache.oltu.oauth2</groupId>
         <artifactId>org.apache.oltu.oauth2.resourceserver</artifactId>
-        <version>${oltu.version}</version>
     </dependency>
     
     
@@ -186,7 +112,6 @@
 	<dependency>
 	    <groupId>com.caucho</groupId>
 	    <artifactId>hessian</artifactId>
-	    <version>4.0.38</version>
 	</dependency>
 
     
@@ -196,7 +121,6 @@
     <dependency>
          <groupId>org.freemarker</groupId>
          <artifactId>freemarker-gae</artifactId>
-         <version>2.3.20</version>
      </dependency>
      
      
@@ -205,67 +129,56 @@
      <dependency>
 	    <groupId>org.igniterealtime.smack</groupId>
 	    <artifactId>smack-core</artifactId>
-	    <version>${smack.version}</version>
 	</dependency>
      
      <dependency>
 	    <groupId>org.igniterealtime.smack</groupId>
 	    <artifactId>smack-im</artifactId>
-	    <version>${smack.version}</version>
 	</dependency>
 	
 	<dependency>
 	    <groupId>org.igniterealtime.smack</groupId>
 	    <artifactId>smack-tcp</artifactId>
-	    <version>${smack.version}</version>
 	</dependency>
 	
 	<dependency>
 	    <groupId>org.igniterealtime.smack</groupId>
 	    <artifactId>smack-extensions</artifactId>
-	    <version>${smack.version}</version>
 	</dependency>
 	
 	<dependency>
 	    <groupId>org.igniterealtime.smack</groupId>
 	    <artifactId>smack-experimental</artifactId>
-	    <version>${smack.version}</version>
 	</dependency>
 	
 	<dependency>
 	    <groupId>org.igniterealtime.smack</groupId>
 	    <artifactId>smack-java7</artifactId>
-	    <version>${smack.version}</version>
 	</dependency>
 	
 	<dependency>
 	    <groupId>org.igniterealtime.smack</groupId>
 	    <artifactId>smack-legacy</artifactId>
-	    <version>${smack.version}</version>
 	</dependency>
 	
 	<dependency>
 	    <groupId>org.igniterealtime.smack</groupId>
 	    <artifactId>smack-bosh</artifactId>
-	    <version>${smack.version}</version>
 	</dependency>
 	
 	<dependency>
 	    <groupId>org.igniterealtime.smack</groupId>
 	    <artifactId>smack-resolver-dnsjava</artifactId>
-	    <version>${smack.version}</version>
 	</dependency>
 	
 	<dependency>
 	    <groupId>org.igniterealtime.smack</groupId>
 	    <artifactId>smack-resolver-javax</artifactId>
-	    <version>${smack.version}</version>
 	</dependency>
 	
 	<dependency>
 	    <groupId>org.igniterealtime.smack</groupId>
 	    <artifactId>smack-debug</artifactId>
-	    <version>${smack.version}</version>
 	</dependency>
      
      
@@ -273,7 +186,6 @@
      <dependency>
         <groupId>com.barchart.udt</groupId>
         <artifactId>barchart-udt-bundle</artifactId>
-        <version>2.3.0</version>
       </dependency>
       
       
@@ -281,7 +193,6 @@
       <dependency>
 		<groupId>spy</groupId>
 		<artifactId>spymemcached</artifactId>
-		<version>2.8.1</version>
 	  </dependency>
     
     
@@ -289,74 +200,60 @@
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-core</artifactId>
-        <version>${springframework.version}</version>
     </dependency>
     <dependency>
 		<groupId>javax.mail</groupId>
 		<artifactId>mail</artifactId>
-		<version>1.4.7</version>
 	</dependency>
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-beans</artifactId>
-        <version>${springframework.version}</version>
     </dependency>
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-context</artifactId>
-        <version>${springframework.version}</version>
     </dependency>
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-context-support</artifactId>
-        <version>${springframework.version}</version>
     </dependency>
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-tx</artifactId>
-        <version>${springframework.version}</version>
     </dependency>
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-jdbc</artifactId>
-        <version>${springframework.version}</version>
     </dependency>
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-test</artifactId>
         <scope>test</scope>
-        <version>${springframework.version}</version>
     </dependency>
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-web</artifactId>
-        <version>${springframework.version}</version>
     </dependency>
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-webmvc</artifactId>
-        <version>${springframework.version}</version>
     </dependency>
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-core</artifactId>
-        <version>${springframework.version}</version>
     </dependency>
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-expression</artifactId>
-        <version>${springframework.version}</version>
     </dependency>
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-aop</artifactId>
-        <version>${springframework.version}</version>
     </dependency>
 
     <dependency>
         <groupId>org.quartz-scheduler</groupId>
         <artifactId>quartz</artifactId>
-        <version>2.2.1</version>
     </dependency>
     
     
@@ -365,7 +262,6 @@
     <dependency>
           <groupId>org.apache.kafka</groupId>
           <artifactId>kafka_2.10</artifactId>
-          <version>0.8.1.1</version>
           <exclusions>
               <exclusion>
                   <artifactId>jmxtools</artifactId>
@@ -387,17 +283,14 @@
     <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
-         <version>${slf4j.version}</version>
      </dependency>
      <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-log4j12</artifactId>
-         <version>${slf4j.version}</version>
      </dependency>
 	 <dependency>
          <groupId>log4j</groupId>
          <artifactId>log4j</artifactId>
-         <version>1.2.17</version>
       </dependency>
       
       <!-- guice -->
@@ -405,21 +298,18 @@
 	<dependency>
 	    <groupId>com.google.inject</groupId>
 	    <artifactId>guice</artifactId>
-	    <version>4.1.0</version>
 	</dependency>
 	
 	<!-- thrift -->
 	<dependency>
 	  <groupId>org.apache.thrift</groupId>
 	  <artifactId>libthrift</artifactId>
-	  <version>0.9.3</version>
 	</dependency>
 	
 	<!-- protobuf -->
 	<dependency>
 		<groupId>com.google.protobuf</groupId>
 		<artifactId>protobuf-java</artifactId>
-		<version>2.6.1</version>
 	</dependency>
 	
 	<!-- netty -->
@@ -427,7 +317,6 @@
 	<dependency>
 	    <groupId>io.netty</groupId>
 	    <artifactId>netty-all</artifactId>
-	    <version>4.1.3.Final</version>
 	</dependency>
 
       
@@ -436,116 +325,96 @@
 	<dependency>
 		<groupId>commons-lang</groupId>
 		<artifactId>commons-lang</artifactId>
-		<version>2.6</version>
 	</dependency>
 	<dependency>
 		<groupId>commons-pool</groupId>
 		<artifactId>commons-pool</artifactId>
-		<version>1.6</version>
 	</dependency>
 	<dependency>
 		<groupId>commons-codec</groupId>
 		<artifactId>commons-codec</artifactId>
-		<version>1.7</version>
 	</dependency>
 	<dependency>
 		<groupId>commons-fileupload</groupId>
 		<artifactId>commons-fileupload</artifactId>
-		<version>1.3</version>
 	</dependency>
 	<dependency>
 		<groupId>commons-logging</groupId>
 		<artifactId>commons-logging</artifactId>
-		<version>1.1.2</version>
 	</dependency>
 	<dependency>
 		<groupId>cglib</groupId>
 		<artifactId>cglib</artifactId>
-		<version>2.2.2</version>
 	</dependency>
 	<dependency>
 		<groupId>commons-beanutils</groupId>
 		<artifactId>commons-beanutils</artifactId>
-		<version>1.8.3</version>
 	</dependency>
 	<dependency>
 		<groupId>commons-io</groupId>
 		<artifactId>commons-io</artifactId>
-		<version>2.2</version>
 	</dependency>
 	
 	
 	<dependency>
          <groupId>org.hibernate</groupId>
          <artifactId>hibernate-validator</artifactId>
-         <version>4.2.0.Final</version>
      </dependency>
      
      <dependency>
 		<groupId>org.hibernate</groupId>
 		<artifactId>hibernate-validator-annotation-processor</artifactId>
-		<version>4.2.0.Final</version>
 	</dependency>
      
      <dependency>
           <groupId>javax.validation</groupId>
           <artifactId>validation-api</artifactId>
-          <version>1.0.0.GA</version>
       </dependency>
       
       <dependency>
 		<groupId>dom4j</groupId>
 		<artifactId>dom4j</artifactId>
-		<version>1.6.1</version>
 	  </dependency>
 	  
 	  <dependency>
 			<groupId>com.lowagie</groupId>
 			<artifactId>itext</artifactId>
-			<version>2.1.7</version>
 		</dependency>
 	
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.2.4</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>2.5.1</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-jaxrs</artifactId>
-			<version>1.9.13</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>jaxen</groupId>
 			<artifactId>jaxen</artifactId>
-			<version>1.1.1</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>com.metaparadigm</groupId>
 			<artifactId>json-rpc</artifactId>
-			<version>1.0</version>
 		</dependency>
 		
 		<dependency>
              <groupId>javax.servlet</groupId>
              <artifactId>javax.servlet-api</artifactId>
              <scope>provided</scope>
-             <version>3.1.0</version>
          </dependency>
          
          <dependency>
 			<groupId>javax.xml.stream</groupId>
 			<artifactId>stax-api</artifactId>
-			<version>1.0-2</version>
 		</dependency>
 		
 		
@@ -553,39 +422,33 @@
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
-			<version>1.5.0</version>
 		</dependency>
 		
 		<!-- fastjson -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
-			<version>1.2.5</version>
 		</dependency>
 		
 		<!-- zookeeper -->
 		<dependency>
 			<groupId>org.apache.zookeeper</groupId>
 			<artifactId>zookeeper</artifactId>
-			<version>3.4.6</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>com.101tec</groupId>
 			<artifactId>zkclient</artifactId>
-			<version>0.7</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.apache.curator</groupId>
 			<artifactId>curator-framework</artifactId>
-			<version>3.0.0</version>
 		</dependency>
 		
 		<dependency>
 	    	<groupId>org.apache.curator</groupId>
 	    	<artifactId>curator-recipes</artifactId>
-	    	<version>3.0.0</version>
 		</dependency>   
 		
          <!-- ########################jdk version######################## -->
@@ -597,15 +460,10 @@
 			<systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
 		</dependency> -->
   </dependencies>
-  </dependencyManagement>
   
-    <!-- springboot -->
-  	<!-- Package as an executable jar -->
-	<plugins>
-		<plugin>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-maven-plugin</artifactId>
-		</plugin>
-	</plugins>
   
+  
+  <build>
+    <finalName>demo-base</finalName>
+  </build>
 </project>
