--- a/demo-springcloud/pom.xml
+++ b/demo-springcloud/pom.xml
@@ -6,22 +6,41 @@
     <groupId>com.learn.parent</groupId>
     <artifactId>yzh-learn</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../</relativePath>
   </parent>
+  
+  
+  
   <groupId>com.learn.sc</groupId>
   <artifactId>demo-springcloud</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <name>demo-springcloud Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  
+  
+  
+  
+  
   <dependencies>
+    <!-- springboot -->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
   </dependencies>
+  
+  
+  
   <build>
-    <finalName>demo-springcloud</finalName>
-  </build>
+  	<finalName>demo-springcloud</finalName>
+    <plugins>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+        </plugin>
+    </plugins>
+</build>
+  
+  
 </project>
