--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
        <skipTests>true</skipTests>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-       <springframework.version>4.1.6.RELEASE</springframework.version>
+       <springframework.version>4.3.8.RELEASE</springframework.version>
        <JAVA_HOME>C:\Program Files\Java\jdk1.8.0_51</JAVA_HOME>
        <slf4j.version>1.7.5</slf4j.version>
        <shiro.version>1.2.3</shiro.version>
@@ -56,11 +56,11 @@
 	  
 	<!-- springboot -->
     <!-- Inherit defaults from Spring Boot -->
-	<parent>
+	<!-- <parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.5.15.RELEASE</version>
-	</parent>
+	</parent> -->
     
     
     <dependencyManagement>
@@ -109,10 +109,26 @@
 	
 	<!-- springboot -->
 	<!-- Add typical dependencies for a web application -->
-	<dependency>
+	<!-- <dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-web</artifactId>
-	</dependency>
+	</dependency> -->
+	
+	<!-- Override Spring Data release train provided by Spring Boot -->
+    <dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-releasetrain</artifactId>
+        <version>Fowler-SR2</version>
+        <scope>import</scope>
+        <type>pom</type>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <version>1.5.15.RELEASE</version>
+        <type>pom</type>
+        <scope>import</scope>
+    </dependency>
     
     
     <!-- mqtt -->
