--- a/demo-springcloud/pom.xml
+++ b/demo-springcloud/pom.xml
@@ -25,9 +25,43 @@
   <dependencies>
     <!-- springboot -->
     <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <exclusions>
+           <exclusion>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+           </exclusion>
+       </exclusions>
+    </dependency>
+     <!--    
+    <dependency>
+		<groupId>com.fasterxml.jackson</groupId>
+		<artifactId>jackson-bom</artifactId>
+		<version>2.8.11.20180608</version>
+	</dependency>
+	<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.2.2</version>
+		</dependency> -->
+	
+<!-- 	
+	<dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-releasetrain</artifactId>
+        <version>Fowler-SR2</version>
+        <scope>import</scope>
+        <type>pom</type>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <version>1.5.15.RELEASE</version>
+        <type>pom</type>
+        <scope>import</scope>
+    </dependency> -->
+        
   </dependencies>
   
   
