--- a/demo-springcloud/pom.xml
+++ b/demo-springcloud/pom.xml
@@ -28,12 +28,25 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
       <exclusions>
-           <exclusion>
+           <!-- <exclusion>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
+           </exclusion> -->
+           <exclusion>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-jaxrs</artifactId>
            </exclusion>
        </exclusions>
     </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+	<dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-core</artifactId>
+	    <version>2.8.11</version>
+	</dependency>
+
+    
      <!--    
     <dependency>
 		<groupId>com.fasterxml.jackson</groupId>
