--- a/demo-springcloud/pom.xml
+++ b/demo-springcloud/pom.xml
@@ -19,7 +19,20 @@
   <url>http://maven.apache.org</url>
   
   
-  
+    <profiles>
+	  	<profile>
+		    <id>jdk-1.8</id>
+		    <activation>
+		        <activeByDefault>true</activeByDefault>
+		        <jdk>1.8</jdk>
+		    </activation>
+		    <properties>
+		        <maven.compiler.source>1.8</maven.compiler.source>
+		        <maven.compiler.target>1.8</maven.compiler.target>
+		        <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
+		    </properties>
+		</profile> 
+	  </profiles>
   
   
   <dependencies>
