--- a/demo-springcloud/pom.xml
+++ b/demo-springcloud/pom.xml
@@ -40,16 +40,6 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
-      <exclusions>
-           <!-- <exclusion>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-core</artifactId>
-           </exclusion> -->
-           <exclusion>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-jaxrs</artifactId>
-           </exclusion>
-       </exclusions>
     </dependency>
     
     <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
@@ -59,6 +49,13 @@
 	    <version>2.8.11</version>
 	</dependency>
 
+
+	<!-- 热部署 -->
+	<dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-devtools</artifactId>
+        <optional>true</optional>
+    </dependency>
     
      <!--    
     <dependency>
