--- a/demo-springcloud/pom.xml
+++ b/demo-springcloud/pom.xml
@@ -57,6 +57,21 @@
         <optional>true</optional>
     </dependency>
     
+    
+    <!-- springcloud eureka -->
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-config</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+    </dependency>
+    
      <!--    
     <dependency>
 		<groupId>com.fasterxml.jackson</groupId>
