--- a/demo-springcloud-all/first-114/pom.xml
+++ b/demo-springcloud-all/first-114/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.demo.springcloud.all</groupId>
     <artifactId>demo-springcloud-all</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>2.0.1.RELEASE</version>
   </parent>
   
   
