--- a/demo-springcloud-all/first-person/pom.xml
+++ b/demo-springcloud-all/first-person/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>com.demo.springcloud.all</groupId>
     <artifactId>demo-springcloud-all</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>2.0.1.RELEASE</version>
   </parent>
   
   
@@ -17,14 +17,22 @@
   <packaging>war</packaging>
   <name>first-person Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  <dependencies>
+
+<dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-config</artifactId>
     </dependency>
-  </dependencies>
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+    </dependency>
+</dependencies>
+
   <build>
     <finalName>first-person</finalName>
   </build>
