--- a/demo-springcloud-all/first-police/pom.xml
+++ b/demo-springcloud-all/first-police/pom.xml
@@ -2,25 +2,37 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
+  
   <parent>
     <groupId>com.demo.springcloud.all</groupId>
     <artifactId>demo-springcloud-all</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>2.0.1.RELEASE</version>
   </parent>
+  
   <groupId>com.demo.springcloud.first.police</groupId>
   <artifactId>first-police</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <name>first-police Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  <dependencies>
+
+
+<dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-config</artifactId>
     </dependency>
-  </dependencies>
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+    </dependency>
+</dependencies>
+
+
   <build>
     <finalName>first-police</finalName>
   </build>
