结构变更提交

--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,8 @@
   
   
   <modules>
-    <module>demo-springcloud</module>
+    <module>demo-springcloud-all</module>
     <module>demo-base</module>
-    <module>demo-springcloud-first-114</module>
-    <module>demo-springcloud-first-police</module>
-    <module>demo-springcloud-first-person</module>
   </modules>
   
   
