--- a/demo-springcloud-all/l06-ribbon-client/pom.xml
+++ b/demo-springcloud-all/l06-ribbon-client/pom.xml
@@ -45,12 +45,6 @@
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
     
-    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
-	<dependency>
-	    <groupId>com.fasterxml.jackson.core</groupId>
-	    <artifactId>jackson-core</artifactId>
-	    <version>2.8.11</version>
-	</dependency>
 
 
 	<!-- 热部署 -->
@@ -61,34 +55,19 @@
     </dependency>
     
     
-    
-     <!--    
-    <dependency>
-		<groupId>com.fasterxml.jackson</groupId>
-		<artifactId>jackson-bom</artifactId>
-		<version>2.8.11.20180608</version>
-	</dependency>
+    <!-- rinbbon -->
 	<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-core</artifactId>
-			<version>2.2.2</version>
-		</dependency> -->
-	
-<!-- 	
-	<dependency>
-        <groupId>org.springframework.data</groupId>
-        <artifactId>spring-data-releasetrain</artifactId>
-        <version>Fowler-SR2</version>
-        <scope>import</scope>
-        <type>pom</type>
+        <groupId>com.netflix.ribbon</groupId>
+        <artifactId>ribbon-core</artifactId>
+        <version>2.2.2</version>
     </dependency>
+    
     <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-dependencies</artifactId>
-        <version>1.5.15.RELEASE</version>
-        <type>pom</type>
-        <scope>import</scope>
-    </dependency> -->
+        <groupId>com.netflix.ribbon</groupId>
+        <artifactId>ribbon-httpclient</artifactId>
+        <version>2.2.2</version>
+    </dependency>
+    
         
   </dependencies>
   
