--- a/demo-springcloud-all/l10-feign-client/pom.xml
+++ b/demo-springcloud-all/l10-feign-client/pom.xml
@@ -56,6 +56,14 @@
       <artifactId>httpclient</artifactId>
     </dependency>
     
+    <!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
+	<dependency>
+	    <groupId>commons-logging</groupId>
+	    <artifactId>commons-logging</artifactId>
+	    <version>1.2</version>
+	</dependency>
+    
+    
   </dependencies>
   
   
