--- a/demo-springcloud-all/l10-feign-client/pom.xml
+++ b/demo-springcloud-all/l10-feign-client/pom.xml
@@ -56,12 +56,34 @@
       <artifactId>httpclient</artifactId>
     </dependency>
     
-    <!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
+    <!-- commons-logging -->
 	<dependency>
 	    <groupId>commons-logging</groupId>
 	    <artifactId>commons-logging</artifactId>
 	    <version>1.2</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/io.github.openfeign/feign-slf4j -->
+	<dependency>
+	    <groupId>io.github.openfeign</groupId>
+	    <artifactId>feign-slf4j</artifactId>
+	</dependency>
+
+	
+	
+	
+	<!-- feign注解 -->
+	<dependency>
+      <groupId>io.github.openfeign</groupId>
+      <artifactId>feign-jaxrs</artifactId>
+    </dependency>
+    
+	<dependency>
+      <groupId>javax.ws.rs</groupId>
+      <artifactId>jsr311-api</artifactId>
+      <version>1.1.1</version>
+    </dependency>    
+    
     
     
   </dependencies>
