--- a/demo-springcloud-all/S3-l02-spring-zuul-server/src/main/resources/application.yml
+++ b/demo-springcloud-all/S3-l02-spring-zuul-server/src/main/resources/application.yml
@@ -1,31 +1,10 @@
 server:
   port: 8761
 
-
-spring:
-  application:
-    name: zuul-server-1
-  profiles: slave1
-
 eureka:
   client:
-    serverUrl:
-      defaultZone: http://slave2:8762/eureka
-      
----
-server:
-  port: 8762
-
-
-spring:
-  application:
-    name: zuul-server-2
-  profiles: slave2
-
-eureka:
-  client:
-    serverUrl:
-      defaultZone: http://slave1:8761/eureka
+    register-with-eureka: false
+    fetch-registry: false
       
 
     
