--- a/demo-springcloud-all/pom.xml
+++ b/demo-springcloud-all/pom.xml
@@ -44,6 +44,7 @@
     <module>S3-l02-spring-zuul-server</module>
     <module>S3-l02-spring-zuul-sale</module>
     <module>S3-l02-spring-zuul-member</module>
+    <module>S3-l02-spring-zuul-gateway</module>
   </modules>
   
       <profiles>
