--- a/demo-springcloud-all/S3-l02-spring-zuul-gateway/src/main/resources/application.yml
+++ b/demo-springcloud-all/S3-l02-spring-zuul-gateway/src/main/resources/application.yml
@@ -9,6 +9,10 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
+
+management:
+  security:
+    enabled: false
       
 zuul:
   routes:
@@ -26,3 +30,12 @@ zuul:
     testRoute:
       path: /fo/**
       url: forward:/source/receive
+      
+      
+      
+#需要加上这段配置,不然actuator的很多功能不能生效
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'     
