--- a/demo-springcloud-all/S3-l02-spring-zuul-gateway/pom.xml
+++ b/demo-springcloud-all/S3-l02-spring-zuul-gateway/pom.xml
@@ -63,6 +63,10 @@
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient</artifactId>
     </dependency>      
+    <dependency>
+        <groupId>org.codehaus.groovy</groupId>
+        <artifactId>groovy-all</artifactId>
+    </dependency>          
   </dependencies>
 
   <build>
