--- a/demo-springcloud-all/S3-l08-springcloud-stream-consumer/pom.xml
+++ b/demo-springcloud-all/S3-l08-springcloud-stream-consumer/pom.xml
@@ -2,11 +2,11 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
+<!--   <parent>
     <groupId>com.demo.springcloud.all</groupId>
     <artifactId>demo-springcloud-all</artifactId>
     <version>2.0.1.RELEASE</version>
-  </parent>
+  </parent> -->
   
   
   <groupId>com.demo.springcloud.all</groupId>
@@ -16,25 +16,34 @@
   <name>S3-l08-springcloud-stream-consumer Maven Webapp</name>
   <url>http://maven.apache.org</url>
   
+  <dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>Dalston.SR3</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+  
   
   <dependencies>
-    <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-starter-config</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-    </dependency>
-    <dependency>
-	  <groupId>org.springframework.cloud</groupId>
-	  <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
-	</dependency> 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-eureka</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-stream-rabbit</artifactId>
+		</dependency>
   </dependencies>
+  
   
   
   <build>
