--- a/demo-springcloud-all/S3-l08-springcloud-stream-consumer/src/main/resources/application.yml
+++ b/demo-springcloud-all/S3-l08-springcloud-stream-consumer/src/main/resources/application.yml
@@ -1,14 +1,19 @@
 server:
-  port: 8081
+  port: 8082
 
 spring:
   application:
-    name: stream-producer
+    name: stream-consumer
   rabbitmq:
     host: 10.99.205.17
     port: 5672
     username: admin
     password: p@ssw0rd
+  cloud: 
+   stream:
+     bindings:
+       myInput:
+         group: groupA   #消费者分组
     
 management: 
   endpoints:
