--- a/demo-springcloud-all/S3-l08-springcloud-stream-server/pom.xml
+++ b/demo-springcloud-all/S3-l08-springcloud-stream-server/pom.xml
@@ -30,10 +30,14 @@
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
     </dependency>
+	<dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-stream</artifactId>
+    </dependency>
     <dependency>
         <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
-    </dependency>    
+        <artifactId>spring-cloud-starter-stream-rabbit</artifactId> <!-- or '*-stream-kafka' -->
+    </dependency>  
   </dependencies>
   
   
