--- a/demo-springcloud-all/pom.xml
+++ b/demo-springcloud-all/pom.xml
@@ -49,6 +49,7 @@
     <module>S3-l08-springcloud-stream-server</module>
     <module>S3-l08-springcloud-stream-producer</module>
     <module>S3-l08-springcloud-stream-consumer</module>
+    <module>S4-l01-springcloud-config-bootstrap</module>
   </modules>
   
       <profiles>
