--- a/demo-springcloud-all/S4-l02-springcloud-config-server/src/main/resources/application.yml
+++ b/demo-springcloud-all/S4-l02-springcloud-config-server/src/main/resources/application.yml
@@ -1,16 +1,19 @@
 server:
   port: 8888
   
+
+
   
 spring:
   cloud:
     config:
       server:
         git:
-          uri: http://gitlab.club.lenovo.com.cn/data/lenovo-loganalysis.git
-          username: myusername
-          password: mypassword
-        default-label: default-config   #表示uri路径下的default-config目录下
+          uri: http://gitlab.club.lenovo.com.cn/java/club-confs/
+          username: yuezh2@lenovo.com
+          password: yuezhihua
+          skip-ssl-validation: true
+        default-label: lenovo-api/resources/properties   #表示uri路径下的default-config目录下
         health:
           enabled: false
           respositories:
