配置中心第一个例子练习提交

--- a/demo-springcloud-all/pom.xml
+++ b/demo-springcloud-all/pom.xml
@@ -51,6 +51,7 @@
     <module>S3-l08-springcloud-stream-consumer</module>
     <module>S4-l01-springcloud-config-bootstrap</module>
     <module>S4-l02-springcloud-config-server</module>
+    <module>S4-l02-springcloud-config-client</module>
   </modules>
   
       <profiles>
