--- a/demo-springcloud-all/S4-l02-springcloud-config-server/pom.xml
+++ b/demo-springcloud-all/S4-l02-springcloud-config-server/pom.xml
@@ -33,7 +33,24 @@
   </dependencies>
   
   
+  
   <build>
-    <finalName>S4-l02-springcloud-config-server</finalName>
-  </build>
+  	<finalName>S4-l02-springcloud-config-server</finalName>
+    <resources>
+        <resource>
+            <directory>src/main/resources</directory>
+            <filtering>true</filtering>
+            <excludes>
+                <exclude>**/*.jks</exclude>
+            </excludes>
+        </resource>
+        <resource>
+            <directory>src/main/resources</directory>
+            <filtering>false</filtering>
+            <includes>
+                <include>**/*.jks</include>
+            </includes>
+        </resource>
+    </resources>
+</build>
 </project>
