--- a/demo-springcloud-all/pom.xml
+++ b/demo-springcloud-all/pom.xml
@@ -53,6 +53,10 @@
     <module>S4-l02-springcloud-config-server</module>
     <module>S4-l02-springcloud-config-client</module>
     <module>S4-l03-springcloud-config-files</module>
+    <module>S4-l05-springcloud-eureka-config-client</module>
+    <module>S4-l05-springcloud-eureka-config-server</module>
+    <module>S4-l05-springcloud-eureka-server</module>
+    <module>S4-l05-springcloud-eureka-zuul</module>
   </modules>
   
       <profiles>
