--- a/demo-springcloud-all/S4-l03-springcloud-config-files/eureka/eureka-config-zuul-dev.yml
+++ b/demo-springcloud-all/S4-l03-springcloud-config-files/eureka/eureka-config-zuul-dev.yml
@@ -1,5 +1,7 @@
+#访问  http://localhost:9000/routeTest
+
 zuul:
   routes:
     testRoute:
       path: /routeTest
-      url: http://www.sohu.com/
+      url: http://www.163.com/
