--- a/demo-springcloud-all/pom.xml
+++ b/demo-springcloud-all/pom.xml
@@ -57,6 +57,7 @@
     <module>S4-l05-springcloud-eureka-config-server</module>
     <module>S4-l05-springcloud-eureka-server</module>
     <module>S4-l05-springcloud-eureka-zuul</module>
+    <module>S4-l05-springcloud-eureka-bus</module>
   </modules>
   
       <profiles>
