--- a/demo-springcloud-all/S4-l05-springcloud-eureka-zuul/pom.xml
+++ b/demo-springcloud-all/S4-l05-springcloud-eureka-zuul/pom.xml
@@ -64,7 +64,12 @@
     <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient</artifactId>
-    </dependency>      
+    </dependency>     
+    
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+    </dependency> 
   </dependencies>
   
   
