ratelimiter实现限流和降级

--- a/demo-base/pom.xml
+++ b/demo-base/pom.xml
@@ -424,6 +424,14 @@
 			<artifactId>elasticsearch</artifactId>
 		</dependency>
 		
+		<!-- guava -->
+		<dependency>
+		    <groupId>com.google.guava</groupId>
+		    <artifactId>guava</artifactId>
+		    <version>25.1-jre</version>
+		</dependency>
+		
+		
 		<!-- fastjson -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
