--- a/demo-springcloud-all/springcloud-jdbctemplate/src/main/resources/datasource.properties
+++ b/demo-springcloud-all/springcloud-jdbctemplate/src/main/resources/datasource.properties
@@ -9,6 +9,17 @@ spring.datasource.secondary.password=mypassword
 spring.datasource.secondary.driver-class-name=com.mysql.jdbc.Driver
 
 
+spring.datasource.sentinel.jdbc-url=jdbc:mysql://lenovodb:3306/?useUnicode=true&amp;characterEncoding=UTF-8&amp;autoReconnect=true
+spring.datasource.sentinel.username=myuser
+spring.datasource.sentinel.password=mypassword
+spring.datasource.sentinel.driver-class-name=com.mysql.jdbc.Driver
+
+
+spring.datasource.outer.jdbc-url=jdbc:mysql://lenovodb:3306/?useUnicode=true&amp;characterEncoding=UTF-8&amp;autoReconnect=true
+spring.datasource.outer.username=myuser
+spring.datasource.outer.password=mypassword
+spring.datasource.outer.driver-class-name=com.mysql.jdbc.Driver
+
 
 # Hikari will use the above plus the following to setup connection pooling
 spring.datasource.primary.type=com.zaxxer.hikari.HikariDataSource
