--- a/demo-springcloud-all/springcloud-jdbctemplate/pom.xml
+++ b/demo-springcloud-all/springcloud-jdbctemplate/pom.xml
@@ -63,6 +63,20 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
     
+    
+    <dependency>
+	  <groupId>org.mybatis</groupId>
+	  <artifactId>mybatis</artifactId>
+	  <version>3.4.6</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-spring -->
+	<dependency>
+	    <groupId>org.mybatis</groupId>
+	    <artifactId>mybatis-spring</artifactId>
+	    <version>1.3.2</version>
+	</dependency>
+	
 </dependencies>
 
 
