日志相关提交

--- a/demo-springcloud-all/pom.xml
+++ b/demo-springcloud-all/pom.xml
@@ -58,6 +58,7 @@
     <module>S4-l05-springcloud-eureka-server</module>
     <module>S4-l05-springcloud-eureka-zuul</module>
     <module>S4-l05-springcloud-eureka-bus</module>
+    <module>springcloud-log</module>
   </modules>
   
       <profiles>
