--- a/demo-springcloud-all/S4-l02-springcloud-config-server/src/main/resources/application.yml
+++ b/demo-springcloud-all/S4-l02-springcloud-config-server/src/main/resources/application.yml
@@ -28,7 +28,7 @@ spring:
         git:
         
         #gitlab
-#          uri: http://gitlab.club.lenovo.com.cn/java/club-confs.git
+#          uri: http://gitlab.club.test.com.cn/java/club-confs.git
 #          username: changeusername
 #          password: changepassword
 #          search-paths: /lenovo-push/resources
