web.xml文件修改提交

--- a/demo-base/pom.xml
+++ b/demo-base/pom.xml
@@ -419,6 +419,11 @@
 		</dependency>
 		
 		<dependency>
+		  <groupId>fakepath</groupId>
+		  <artifactId>fastdfs-client-java</artifactId>
+		</dependency>		
+		
+		<dependency>
 			<groupId>jaxen</groupId>
 			<artifactId>jaxen</artifactId>
 		</dependency>
