--- a/demo-base/src/main/webapp/WEB-INF/web.xml
+++ b/demo-base/src/main/webapp/WEB-INF/web.xml
@@ -5,13 +5,46 @@
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
   
-    <jsp-config>
+<!--     <jsp-config>
     <jsp-property-group>
       <display-name>JSPConfiguration</display-name>
       <url-pattern>*.html</url-pattern>
       <page-encoding>UTF-8</page-encoding>
     </jsp-property-group>
-  </jsp-config>
+  </jsp-config> -->
+  
+  
+
+  <!-- oauth2.oltu -->
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>classpath*:application*.xml</param-value>
+  </context-param>
+  <context-param>
+    <param-name>log4jConfigLocation</param-name>
+    <param-value>classpath:log4j.xml</param-value>
+  </context-param>  
+  
+  <!--
+       Spring context listener
+   -->
+   <listener>
+       <listener-class>oauth2.oltu.custom.common.context.BeanContextLoaderListener</listener-class>
+   </listener>
+  <!-- <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener> -->
+  <listener>
+    <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+  </listener>
+
+  <listener>
+    <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+  </listener>
+  <listener>
+    <listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
+  </listener>  
+  
   
   
   <!-- springmvc -->
@@ -27,25 +60,6 @@
   </servlet-mapping> -->
   
   
-  <!--
-       Spring context listener
-   -->
-   <listener>
-       <listener-class>oauth2.oltu.custom.common.context.BeanContextLoaderListener</listener-class>
-   </listener>
-  <!-- <listener>
-    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-  </listener> -->
-  
-  <!-- oauth2.oltu -->
-  <context-param>
-    <param-name>contextConfigLocation</param-name>
-    <param-value>classpath*:application*.xml</param-value>
-  </context-param>
-  <context-param>
-    <param-name>log4jConfigLocation</param-name>
-    <param-value>classpath:log4j.xml</param-value>
-  </context-param>
   <servlet>
     <servlet-name>springmvc</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -55,22 +69,13 @@
       <param-value>classpath:springmvc/springmvc.xml</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
-    <async-supported>true</async-supported>
+    <!-- <async-supported>true</async-supported> -->
   </servlet>
   <servlet-mapping>
     <servlet-name>springmvc</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
-  <listener>
-    <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
-  </listener>
 
-  <listener>
-    <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
-  </listener>
-  <listener>
-    <listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
-  </listener>
   <session-config>
     <session-timeout>100</session-timeout>
   </session-config>
