--- a/demo-base/pom.xml
+++ b/demo-base/pom.xml
@@ -151,10 +151,15 @@
     
     <!-- freemarker -->
     
-    <dependency>
+<!--     <dependency>
          <groupId>org.freemarker</groupId>
          <artifactId>freemarker-gae</artifactId>
-     </dependency>
+     </dependency> -->
+  
+     <dependency>
+         <groupId>org.freemarker</groupId>
+         <artifactId>freemarker</artifactId>
+     </dependency>       
      
      
      <!-- openfire  -  smack -->
