--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,14 @@
 		<artifactId>spring-boot-starter-web</artifactId>
 	</dependency> -->
 	
+	<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+	<dependency>
+	    <groupId>org.aspectj</groupId>
+	    <artifactId>aspectjweaver</artifactId>
+	    <version>1.8.13</version>
+	</dependency>
+	
+	
 	<!-- Override Spring Data release train provided by Spring Boot -->
     <dependency>
         <groupId>org.springframework.data</groupId>
@@ -221,11 +229,17 @@
     
     <!-- freemarker -->
     
-    <dependency>
+    <!-- <dependency>
          <groupId>org.freemarker</groupId>
          <artifactId>freemarker-gae</artifactId>
          <version>2.3.20</version>
-     </dependency>
+     </dependency> -->
+     
+     <dependency>
+         <groupId>org.freemarker</groupId>
+         <artifactId>freemarker</artifactId>
+         <version>2.3.23</version>
+     </dependency>     
      
      
      <!-- openfire  -  smack -->
