--- a/demo-springcloud-all/springcloud-jdbctemplate/src/main/resources/datasource.properties
+++ b/demo-springcloud-all/springcloud-jdbctemplate/src/main/resources/datasource.properties
@@ -1,23 +1,23 @@
-spring.datasource.primary.jdbc-url=jdbc:mysql://lenovodb:3306/?useUnicode=true&amp;characterEncoding=UTF-8&amp;autoReconnect=true
-spring.datasource.primary.username=myuser
-spring.datasource.primary.password=mypassword
+spring.datasource.primary.jdbc-url=jdbc:mysql://test:3306/?useUnicode=true&amp;characterEncoding=UTF-8&amp;autoReconnect=true
+spring.datasource.primary.username=test
+spring.datasource.primary.password=test
 spring.datasource.primary.driver-class-name=com.mysql.jdbc.Driver
 
-spring.datasource.secondary.jdbc-url=jdbc:mysql://lenovodb:3306/?useUnicode=true&amp;characterEncoding=UTF-8&amp;autoReconnect=true
-spring.datasource.secondary.username=myuser
-spring.datasource.secondary.password=mypassword
+spring.datasource.secondary.jdbc-url=jdbc:mysql://test:3306/?useUnicode=true&amp;characterEncoding=UTF-8&amp;autoReconnect=true
+spring.datasource.secondary.username=test
+spring.datasource.secondary.password=test
 spring.datasource.secondary.driver-class-name=com.mysql.jdbc.Driver
 
 
-spring.datasource.sentinel.jdbc-url=jdbc:mysql://lenovodb:3306/?useUnicode=true&amp;characterEncoding=UTF-8&amp;autoReconnect=true
-spring.datasource.sentinel.username=myuser
-spring.datasource.sentinel.password=mypassword
+spring.datasource.sentinel.jdbc-url=jdbc:mysql://test:3306/?useUnicode=true&amp;characterEncoding=UTF-8&amp;autoReconnect=true
+spring.datasource.sentinel.username=test
+spring.datasource.sentinel.password=test
 spring.datasource.sentinel.driver-class-name=com.mysql.jdbc.Driver
 
 
-spring.datasource.outer.jdbc-url=jdbc:mysql://lenovodb:3306/?useUnicode=true&amp;characterEncoding=UTF-8&amp;autoReconnect=true
-spring.datasource.outer.username=myuser
-spring.datasource.outer.password=mypassword
+spring.datasource.outer.jdbc-url=jdbc:mysql://test:3306/?useUnicode=true&amp;characterEncoding=UTF-8&amp;autoReconnect=true
+spring.datasource.outer.username=test
+spring.datasource.outer.password=test
 spring.datasource.outer.driver-class-name=com.mysql.jdbc.Driver
 
 
