--- a/demo-base/src/main/resources/mongo/mongodb.properties
+++ b/demo-base/src/main/resources/mongo/mongodb.properties
@@ -1,8 +1,8 @@
 profile.active=dev
-mongo.host=g.mall.mongodb.lec.dev
+mongo.host=testmongohost
 mongo.port=27017
-mongo.username=necb2c
-mongo.password=b2c1234
+mongo.username=admin
+mongo.password=12345
 #一个线程变为可用的最大阻塞数
 mongo.connectionsPerHost=8
 #线程队列数,它以上面connectionsPerHost值相乘的结果就是线程队列最大值
