--- a/pom.xml
+++ b/pom.xml
@@ -508,7 +508,7 @@
 	<dependency>
 		<groupId>commons-io</groupId>
 		<artifactId>commons-io</artifactId>
-		<version>2.2</version>
+		<version>2.4</version>
 	</dependency>
 	
 	
@@ -630,6 +630,47 @@
 	    	<artifactId>curator-recipes</artifactId>
 	    	<version>3.0.0</version>
 		</dependency>   
+		
+		
+		<!-- shardingsphere-jdbc -->
+		<dependency>
+		    <groupId>org.apache.shardingsphere</groupId>
+		    <artifactId>shardingsphere-jdbc-core</artifactId>
+		    <version>4.1.1</version>
+		</dependency>		
+		
+		<dependency>
+		    <groupId>org.apache.shardingsphere</groupId>
+		    <artifactId>shardingsphere-sql-parser-engine</artifactId>
+		    <version>4.1.1</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.shardingsphere</groupId>
+		    <artifactId>shardingsphere-sql-parser-mysql</artifactId>
+		    <version>4.1.1</version>
+		    <scope>test</scope>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.shardingsphere</groupId>
+		    <artifactId>shardingsphere-sql-parser-spi</artifactId>
+		    <version>4.1.1</version>
+		</dependency>	
+		
+		<dependency>
+		    <groupId>org.apache.shardingsphere</groupId>
+		    <artifactId>shardingsphere-spi</artifactId>
+		    <version>4.1.1</version>
+		</dependency>
+			
+		<dependency>
+		    <groupId>io.shardingsphere</groupId>
+		    <artifactId>sharding-core</artifactId>
+		    <version>3.1.0</version>
+		</dependency>
+					
+				
 		
 		<!-- netty -->
 		<!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
