--- a/demo-base/pom.xml
+++ b/demo-base/pom.xml
@@ -459,7 +459,21 @@
 	    <artifactId>netty-all</artifactId>
 	</dependency>
 
-      
+     <!-- spring session -->
+	<dependency>  
+			<groupId>org.springframework.boot</groupId>  
+			<artifactId>spring-boot-starter-redis</artifactId>
+	</dependency>  
+	<dependency>  
+			<groupId>org.springframework.session</groupId>  
+			<artifactId>spring-session-data-redis</artifactId>  
+	</dependency>
+	<dependency>
+		<groupId>org.springframework.session</groupId>
+		<artifactId>spring-session</artifactId>
+	</dependency>
+
+     
 			
 	<!-- commons -->
 	<dependency>
