--- a/demo-authserver/authserver/pom.xml
+++ b/demo-authserver/authserver/pom.xml
@@ -66,6 +66,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>  		
 
 
 		<dependency>
