authserver gateway db

--- a/demo-authserver/pom.xml
+++ b/demo-authserver/pom.xml
@@ -20,6 +20,7 @@
   	<module>authserver</module>
     <module>simple-order-service</module>
     <module>simple-base-dao</module>
+    <module>authserver-gateway</module>
   </modules>
   
 
