--- a/demo-authserver/pom.xml
+++ b/demo-authserver/pom.xml
@@ -22,6 +22,7 @@
     <module>simple-base-dao</module>
     <module>authserver-gateway</module>
     <module>gateway-order-service</module>
+    <module>ms-cloud-gateway</module>
   </modules>
   
 
