--- a/demo-authserver/gateway-product-service/src/main/resources/application.yml
+++ b/demo-authserver/gateway-product-service/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
     nacos:
       discovery:
         server-addr: localhost:8848
-        cluster-name: BJ-CLUSTER
+        #cluster-name: BJ-CLUSTER
 
 server:
   port: 8084
