code auth version1

--- a/demo-authserver/pom.xml
+++ b/demo-authserver/pom.xml
@@ -28,6 +28,7 @@
     <module>gateway-product-service</module>
     <module>sso-auth-code-server</module>
     <module>sso-portal-code</module>
+    <module>sso-product-service</module>
   </modules>
   
 
