jwt server init

--- a/demo-authserver/pom.xml
+++ b/demo-authserver/pom.xml
@@ -29,6 +29,7 @@
     <module>sso-auth-code-server</module>
     <module>sso-portal-code</module>
     <module>sso-product-service</module>
+    <module>sso-auth-jwt-server</module>
   </modules>
   
 
