jwt get auth token

--- a/demo-authserver/sso-product-jwt-server/src/main/resources/application.yml
+++ b/demo-authserver/sso-product-jwt-server/src/main/resources/application.yml
@@ -3,8 +3,8 @@ spring:
   datasource:
       druid:
         username: root
-        password: p@ssw0rd
-        #password: admin
+        #password: p@ssw0rd
+        password: admin
         jdbcUrl: jdbc:mysql://localhost:3306/oauth2dev?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&useSSL=false
         driverClassName: com.mysql.jdbc.Driver
         initialSize: 5
@@ -43,5 +43,5 @@ security:
       client-secret: product_app
     resource:
       jwt:
-        key-uri: http://localhost:8888/oauth/token_key
+        key-uri: http://localhost:9999/oauth/token_key
 
