--- a/demo-base/pom.xml
+++ b/demo-base/pom.xml
@@ -459,6 +459,7 @@
 	<dependency>  
 			<groupId>org.springframework.boot</groupId>  
 			<artifactId>spring-boot-starter-redis</artifactId>
+			<version>1.4.0.RELEASE</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.slf4j</groupId>
